--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,14 @@ select {
   font: inherit;
 }
 
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+ul,
+li,
+a {
+  list-style-type: none;
+  text-decoration: none;
+  color: white;
+}
+
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
     scroll-behavior: auto;
@@ -109,19 +116,21 @@ header {
   width: 33.333%;
   display: flex;
   justify-content: center;
-  margin-left: 2em;
 }
 
 #logoContainer a {
   width: 40%;
+  display: inline-block;
+  position: relative;
 }
 
-ul,
-li,
-a {
-  list-style-type: none;
-  text-decoration: none;
-  color: white;
+#logoContainer a img {
+  transition: ease-in-out 350ms;
+}
+
+#logoContainer a img:hover {
+  transform: translateY(-6px);
+  color: #58ad78;
 }
 
 #searchBar {
@@ -133,6 +142,7 @@ a {
   border-radius: 50px;
   font-size: 1rem;
   padding-left: 30px;
+  margin: 10px;
 }
 
 #searchBar > input {
@@ -169,11 +179,48 @@ a {
   display: flex;
   color: rgb(98, 0, 255);
   font-size: 3.5rem;
+  position: relative;
+
+  transition-delay: 35ms;
 }
 
 .largeIcons:hover {
-  transform: translateY(-7.5px);
+  transform: translateY(-6px);
   color: #58ad78;
+}
+
+.iconBorder {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.iconBorder:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  background-color: #58ad78;
+  transform-origin: bottom left;
+  transition: transform 0.25s ease-out;
+}
+
+.logoBorder:after {
+  transform-origin: bottom;
+}
+
+.iconBorder:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.logoBorder:hover:after {
+  transform-origin: bottom;
 }
 
 #bottomNav {
@@ -348,10 +395,6 @@ main {
   padding: 1em;
 }
 
-/* .slide-track:hover {
-  animation-play-state: paused; 
-} */
-
 @keyframes scroll {
   0% {
     transform: translatey(0);
@@ -385,7 +428,6 @@ main {
   width: 100%;
   box-shadow: rgba(98, 0, 255, 0.8) -5px 5px, rgba(98, 0, 255, 0.6) -10px 10px,
     rgba(98, 0, 255, 0.4) -15px 15px, rgba(98, 0, 255, 0.2) -20px 20px;
-  transition: ease-in-out 500ms;
 }
 
 /* ///////////////// Sign-up / Register//////////////////// */
