--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&family=Roboto+Mono:wght@300&display=swap");
 
-/* ////////////////////Reset CSS//////////////////// */
-
-/* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-/* Remove default margin */
 body,
 h1,
 h2,
@@ -23,37 +19,31 @@ dd {
   margin: 0;
 }
 
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
   list-style: none;
 }
 
-/* Set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
 }
 
-/* Set core body defaults */
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
 
-/* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
-/* Make images easier to work with */
 img,
 picture {
   max-width: 100%;
   display: block;
 }
 
-/* Inherit fonts for inputs and buttons */
 input,
 button,
 textarea,
@@ -129,7 +119,7 @@ header {
 }
 
 #logoContainer a img:hover {
-  transform: translateY(-6px);
+  transform: translatey(-3px);
   color: #58ad78;
 }
 
@@ -138,7 +128,7 @@ header {
   justify-content: flex-start;
   width: 33.333%;
   height: 40%;
-  border: 2px solid #6200ff;
+  border: 2px solid rgb(98, 0, 255);
   border-radius: 50px;
   font-size: 1rem;
   padding-left: 30px;
@@ -169,23 +159,21 @@ header {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  gap: 1em;
+  gap: 1.25em;
   width: 33.333%;
-  margin-right: 2em;
 }
 
 .largeIcons {
   transition: ease-in-out 200ms;
   display: flex;
   color: rgb(98, 0, 255);
-  font-size: 3.5rem;
+  font-size: 5vh;
   position: relative;
-
   transition-delay: 35ms;
 }
 
 .largeIcons:hover {
-  transform: translateY(-6px);
+  transform: translatey(-6px);
   color: #58ad78;
 }
 
@@ -224,7 +212,7 @@ header {
 }
 
 #bottomNav {
-  font-size: 1rem;
+  font-size: 1.5vh;
 }
 
 ul li {
@@ -281,9 +269,10 @@ main {
 #heroCard {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   height: 50vh;
   width: 65vw;
-  background-color: #1a1326;
+  background-color: rgb(26, 19, 38);
   margin-top: 1em;
   border-radius: 7.5px;
   border: 2px solid #58ad78;
@@ -312,122 +301,106 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-
   gap: 1em;
-  width: 50%;
-  height: 100%;
+  width: 23vw;
   padding-left: 3em;
-  padding-top: 3em;
+  padding-top: 1em;
+  font-size: 1.6vh;
+  word-spacing: -6px;
 }
 
 #heroText > h1 {
-  font-size: 2.1rem;
+  font-size: 3.3vh;
   color: white;
   background: linear-gradient(to left, #6200ff 0 10%, #58ad78 70% 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  word-spacing: -8px;
 }
 
 #heroText > h1 > span {
   background: linear-gradient(to left, #58ad78 0 40%, #6200ff 100% 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  word-spacing: -8px;
 }
 
-#heroText > p {
-  text-align: justify;
-  word-spacing: -4px;
-  line-height: 1.7em;
-}
-
-#heroText span {
-  color: #6200ff;
+#heroText > div > p {
+  margin-bottom: 13px;
+  word-spacing: -1px;
 }
 
 /* //////////////////////////////////////////////////////// */
 
 #sliders-container {
-  width: 100%;
-  height: 85vh;
   display: flex;
   flex-direction: row;
-  position: relative;
-  overflow: hidden;
-  scale: 1.2;
-  padding-left: 8em;
-}
-
-.slider {
-  height: 100vh;
-  position: relative;
-  width: 175px;
-  display: flex;
-  place-items: center;
-  overflow: hidden;
+  width: 36vw;
   transform: skewX(7deg);
-}
-
-.move-col-2-up {
-  padding-bottom: 13em;
-}
-
-.move-col-3-up {
-  padding-bottom: -27.5em;
-}
-
-.move-col-4-up {
-  padding-bottom: 13em;
+  gap: 0.8vh;
+  scale: 1.3;
+  margin-top: 6vh;
+  padding-left: 2vh;
+  mask: linear-gradient(89deg, rgba(0, 0, 0, 0) -5%, rgba(0, 0, 0, 1) 8%);
 }
 
 .slide-track {
   display: flex;
   flex-direction: column;
-  animation: scroll 60s linear infinite;
-  padding: 1em;
+  flex-wrap: wrap;
+  background-color: rgba(0, 0, 0, 0);
 }
 
-.slide-track2 {
-  display: flex;
-  flex-direction: column;
-  animation: scrollalt 60s linear infinite;
-  padding: 1em;
+.slide-track-container[data-animated="true"] {
+  mask: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 10%);
 }
 
-@keyframes scroll {
-  0% {
-    transform: translatey(0);
-  }
-
-  100% {
-    transform: translatey(calc(-250px * 2.38));
-  }
+.slide-track-container[data-animated="true"] .slide-track {
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: slide var(--_animation-duration, 625s)
+    var(--_animation-direction, forwards) linear infinite;
+  mask: linear-gradient(to left, rgba(0, 0, 0, 0.4) -10%, rgba(0, 0, 0, 1) 20%);
 }
 
-@keyframes scrollalt {
-  0% {
-    transform: translatey(0);
-  }
+.slide-track-container[data-direction="down"] {
+  --_animation-direction: reverse;
+}
 
-  100% {
-    transform: translatey(calc(250px * 2.38));
+.slide-track-container[data-direction="up"] {
+  --_animation-direction: forwards;
+}
+
+@keyframes slide {
+  to {
+    transform: translateY(calc(-50% - 0.5rem));
   }
 }
 
 .slide {
-  height: auto;
-  width: 100%;
+  height: 14.15vh;
+  padding: 1.3vh;
+  padding-left: 1.9vh;
+  padding-right: 0em;
   display: flex;
-  align-items: center;
-  padding: 2.5px;
-  padding-bottom: 25px;
 }
 
 .slide img {
-  width: 100%;
-  box-shadow: rgba(98, 0, 255, 0.8) -5px 5px, rgba(98, 0, 255, 0.6) -10px 10px,
-    rgba(98, 0, 255, 0.4) -15px 15px, rgba(98, 0, 255, 0.2) -20px 20px;
+  transition: ease-in-out 500ms;
+  animation-name: box-shadow-ani;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes box-shadow-ani {
+  to {
+    box-shadow: rgba(98, 0, 255, 0.65) -0.47vh 0.47vh,
+      rgba(98, 0, 255, 0.5) -0.94vh 0.94vh,
+      rgba(98, 0, 255, 0.35) -1.41vh 1.41vh,
+      rgba(98, 0, 255, 0.2) -1.88vh 1.88vh;
+  }
+}
+
+.stagger-track {
+  transform: translatey(-8vh);
 }
 
 /* ///////////////// Sign-up / Register//////////////////// */
