--- a/src/index.css
+++ b/src/index.css
@@ -270,6 +270,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: space-around;
   height: 50vh;
   width: 65vw;
   background-color: rgb(26, 19, 38);
@@ -281,7 +282,7 @@ main {
 }
 
 #lowerHeroSection {
-  height: 20vh;
+  height: 24vh;
   width: 65vw;
   display: flex;
   flex-direction: row;
@@ -305,7 +306,7 @@ main {
   width: 23vw;
   padding-left: 3em;
   padding-top: 1em;
-  font-size: 1.6vh;
+  font-size: 1.7vh;
   word-spacing: -6px;
 }
 
@@ -333,12 +334,12 @@ main {
 #sliders-container {
   display: flex;
   flex-direction: row;
-  width: 36vw;
+  width: 35.5vw;
   transform: skewX(7deg);
   gap: 0.8vh;
   scale: 1.3;
   margin-top: 6vh;
-  padding-left: 2vh;
+  /* Left border fade */
   mask: linear-gradient(89deg, rgba(0, 0, 0, 0) -5%, rgba(0, 0, 0, 1) 8%);
 }
 
@@ -350,6 +351,7 @@ main {
 }
 
 .slide-track-container[data-animated="true"] {
+  /* Top border fade */
   mask: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 10%);
 }
 
@@ -358,7 +360,7 @@ main {
   flex-wrap: nowrap;
   animation: slide var(--_animation-duration, 625s)
     var(--_animation-direction, forwards) linear infinite;
-  mask: linear-gradient(to left, rgba(0, 0, 0, 0.4) -10%, rgba(0, 0, 0, 1) 20%);
+  mask: linear-gradient(to left, rgba(0, 0, 0, 0.4) -30%, rgba(0, 0, 0, 1) 20%);
 }
 
 .slide-track-container[data-direction="down"] {
@@ -395,7 +397,7 @@ main {
     box-shadow: rgba(98, 0, 255, 0.65) -0.47vh 0.47vh,
       rgba(98, 0, 255, 0.5) -0.94vh 0.94vh,
       rgba(98, 0, 255, 0.35) -1.41vh 1.41vh,
-      rgba(98, 0, 255, 0.2) -1.88vh 1.88vh;
+      rgba(98, 0, 255, 0.1) -1.88vh 1.88vh;
   }
 }
 
